syntax = "proto3";
package rpc;
option go_package = "./rpc";

// 用户
message User {
  string account = 1;
  string alias = 2;
  string avatar = 3;
  int64 created_at = 4;
}

// 消息
message Message {
  int64 id = 1;
  int32 type = 2;
  string body = 3;
  string extra = 4;
}

// 群成员
message Member {
  string account = 1;
  string alias = 2;
  string avatar = 3;
  int64 join_time = 4;
}

// 服务
// 插入消息请求
message InsertMessageReq {
  string sender = 1;
  string dest = 2;
  int64 send_time = 3;
  Message message = 4;
}

// 插入消息应答
message InsertMessageResp {
  int64 message_id = 1;
}

// 确认消息请求
message AckMessageReq {
  string account = 1;
  int64 message_id = 2;
}

// 创建组请求
message CreateGroupReq {
  string app = 1;
  string name = 2;
  string avatar = 3;
  string introduction = 4;
  string owner = 5;
  repeated string members = 6;
}

// 创建组应答
message CreateGroupResp {
  string group_id = 1;
}

// 加入组请求
message JoinGroupReq {
  string account = 1;
  string group_id = 2;
}

// 退出组请求
message QuitGroupReq {
  string account = 1;
  string group_id = 2;
}

// 获取组请求
message GetGroupReq {
  string group_id = 1;
}

// 获取组应答
message GetGroupResp {
  string id = 1;
  string name = 2;
  string avatar = 3;
  string introduction = 4;
  string owner = 5;
  int64 created_at = 6;
}

// 获取组成员请求
message GroupMembersReq {
  string group_id = 1;
}

// 组成员应答, 返回所有该组成员
message GroupMembersResp {
  repeated Member users = 1;
}

// 获取离线消息请求
message GetOfflineMessageIndexReq {
  string account = 1;
  int64 message_id = 2;
}

// 获取离线消息索引应答
message GetOfflineMessageIndexResp {
  repeated MessageIndex list = 1;
}

// 消息索引
message MessageIndex {
  int64 message_id = 1;
  int32 direction = 2;
  int64 send_time  = 3;
  string accountB = 4;
  string group    = 5;
}

// 获取离线消息内容请求
message GetOfflineMessageContentReq {
  repeated int64 message_ids = 1;
}

// 获取离线消息内容应答
message GetOfflineMessageContentResp {
  repeated Message list = 1;
}